--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </form>
         </div>
         
-        <div class="socials">
+        <section class="socials">
           <h1>Follow our adventure! (Plus DEALS!) 🏃‍♀️🏃‍♂️</h1>
           <div class="icons">
             <a href="https://discord.gg/fgHmrHp" target="_blank">
@@ -100,7 +100,7 @@
               <img src="images/social/twitch.png" alt="keyboard.gg's Twitch" title="Twitch" />
             </a>
           </div>
-        </div>
+        </section>
       </div>
 
       <section class="what">
