Added keyboard.gg logo

--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
     <main>
       <div class="the-fold">
         <div class="heading-wrapper">
-          <h1 class="page-title">
-            The Edgeguard Keyboard Adapter
-          </h1>
-          <h2 class="kickstarter-heading">
-            As seen on
-            <a
-              href="https://www.kickstarter.com/projects/edgeguard/keyboard-adapter"
-              >Kickstarter</a
-            >!
-          </h2>
-          <p class="subtitle">
-            Play Smash with a Keyboard!
-            <span class="coming-soon">(Coming soon!)</span>
-          </p>
+          <div class="logo-side">
+            <img class="logo" src="images/logo.png" alt="keyboard.gg Logo" />
+          </div>
+          <div class="intro-text">
+            <h1 class="page-title">The Edgeguard Keyboard Adapter</h1>
+            <h2 class="kickstarter-heading">
+              As seen on
+              <a
+                href="https://www.kickstarter.com/projects/edgeguard/keyboard-adapter"
+                >Kickstarter</a
+              >!
+            </h2>
+            <p class="subtitle">
+              Play Smash with a Keyboard!
+              <span class="coming-soon">(Coming soon!)</span>
+            </p>
+          </div>
         </div>
         <div class="videos">
           <video autoplay loop playsinline muted id="demo-video">
