Small styling spacing changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="intro-text">
             <h1 class="page-title">The Edgeguard Keyboard Adapter</h1>
             <h2 class="kickstarter-heading">
-              Previously on
+              As seen on
               <a
                 href="https://www.kickstarter.com/projects/edgeguard/keyboard-adapter"
                 >Kickstarter</a
@@ -36,7 +36,7 @@
             </h2>
             <p class="subtitle">
               Play Smash with a Keyboard!
-              <span class="coming-soon">(Still coming soon!)</span>
+              <span class="coming-soon">(<em>Still</em> coming soon!)</span>
             </p>
           </div>
         </div>
