Remove Kickstarter link, people thought it failed.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           </div>
           <div class="intro-text">
             <h1 class="page-title">The Edgeguard Keyboard Adapter</h1>
-            <h2 class="kickstarter-heading">
+            <!-- <h2 class="kickstarter-heading">
               As seen on
               <a
                 href="https://www.kickstarter.com/projects/edgeguard/keyboard-adapter"
                 >Kickstarter</a
               >!
-            </h2>
+            </h2> -->
             <p class="subtitle">
               Play Smash with a Keyboard!
               <span class="coming-soon">(<em>Still</em> coming soon!)</span>
