--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 name="interested-email"
                 id="interested-email"
                 class="interested-input"
-                placeholder="email@gmail.com"
+                placeholder="coolperson@gmail.com"
               />
               <input
                 class="interested-submit"
@@ -142,38 +142,54 @@
       <section class="socials">
         <h1>Follow our adventure! (Plus DEALS!) 🏃‍♀️🏃‍♂️</h1>
         <div class="icons">
-          <a href="https://discord.gg/fgHmrHp" target="_blank">
+          <a href="https://discord.gg/fgHmrHp" target="_blank" rel="noopener">
             <img
               src="images/social/discord.png"
               alt="keyboard.gg's Discord"
               title="Discord"
             />
           </a>
-          <!-- <a href="https://www.reddit.com/u/keyboardGG" target="_blank">
+          <!-- <a href="https://www.reddit.com/u/keyboardGG" target="_blank" rel="noopener">
             <img src="images/social/reddit.png" alt="keyboard.gg's Reddit" title="Reddit" />
           </a> -->
-          <a href="https://twitter.com/danielkaspo" target="_blank">
+          <a
+            href="https://twitter.com/danielkaspo"
+            target="_blank"
+            rel="noopener"
+          >
             <img
               src="images/social/twitter.png"
               alt="keyboard.gg's Twitter"
               title="Twitter"
             />
           </a>
-          <a href="https://www.facebook.com/keyboard.gg/" target="_blank">
+          <a
+            href="https://www.facebook.com/keyboard.gg/"
+            target="_blank"
+            rel="noopener"
+          >
             <img
               src="images/social/facebook.png"
               alt="keyboard.gg's Facebook"
               title="Facebook"
             />
           </a>
-          <a href="https://www.instagram.com/keyboard.gg/" target="_blank">
+          <a
+            href="https://www.instagram.com/keyboard.gg/"
+            target="_blank"
+            rel="noopener"
+          >
             <img
               src="images/social/instagram.png"
               alt="keyboard.gg's Instagram"
               title="Instagram"
             />
           </a>
-          <a href="https://www.twitch.tv/nessdan/" target="_blank">
+          <a
+            href="https://www.twitch.tv/nessdan/"
+            target="_blank"
+            rel="noopener"
+          >
             <img
               src="images/social/twitch.png"
               alt="keyboard.gg's Twitch"
