--- a/index.html
+++ b/index.html
@@ -8,14 +8,36 @@
       name="description"
       content="Play Smash Ultimate with a Keyboard! The Edgeguard adapter turns any keyboard into a Nintendo Switch controller. Compatible with games like Tetris 99, Super Mario Maker 2, Celeste, and more!"
     />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="landing.css?v=2" />
+
+    <!-- <verification> -->
     <!-- For YouTube verification -->
     <meta
       name="google-site-verification"
       content="qnYxYtkLBBjt3RoZSQb5o3ZZZHQLDLNmx71yMYKILGE"
     />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- </verification> -->
+
+    <!-- <socialmedia> -->
+    <!-- All social meta properties coming from https://css-tricks.com/essential-meta-tags-social-media/ -->
+    <meta property="og:site_name" content="keyboard.gg's Edgeguard Adapter" />
+    <meta property="og:title" content="Play Switch games on Keyboard!" />
+    <meta
+      property="og:description"
+      content="Use your keyboard as a controller for games like Smash Ultimate, Tetris 99, and more on the Nintendo Switch!"
+    />
+    <meta property="og:image" content="images/social-media-share.jpg" />
+    <meta
+      name="twitter:image:alt"
+      content="An adapter named Edgeguard connecting a keyboard to a Nintendo Switch."
+    />
+    <meta property="og:url" content="https://keyboard.gg/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="landing.css?v=2" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="fb:app_id" content="394254955078112" />
+    <meta name="twitter:site" content="@danielkaspo" />
+    <!-- </socialmedia> -->
   </head>
 
   <body>
