Update image url to be absolute

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       property="og:description"
       content="Use your keyboard as a controller for games like Smash Ultimate, Tetris 99, and more on the Nintendo Switch!"
     />
-    <meta property="og:image" content="images/social-media-share.jpg" />
+    <meta
+      property="og:image"
+      content="https://keyboard.gg/images/social-media-share.jpg"
+    />
     <meta
       name="twitter:image:alt"
       content="An adapter named Edgeguard connecting a keyboard to a Nintendo Switch."
