--- a/index.html
+++ b/index.html
@@ -4,22 +4,16 @@
     <title>
       Play Smash Ultimate with a Keyboard! The Edgeguard adapter by keyboard.gg
     </title>
-    <meta
-      name="description"
-      content="Play Smash Ultimate with a Keyboard! The Edgeguard adapter turns any keyboard into a Nintendo Switch controller. Compatible with games like Tetris 99, Super Mario Maker 2, Celeste, and more!"
-    />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="landing.css?v=2" />
 
-    <!-- <verification> -->
+    <!-- verification -->
     <!-- For YouTube verification -->
     <meta
       name="google-site-verification"
       content="qnYxYtkLBBjt3RoZSQb5o3ZZZHQLDLNmx71yMYKILGE"
     />
-    <!-- </verification> -->
+    <!-- end verification -->
 
-    <!-- <socialmedia> -->
+    <!-- socialmedia -->
     <!-- All social meta properties coming from https://css-tricks.com/essential-meta-tags-social-media/ -->
     <meta property="og:site_name" content="keyboard.gg's Edgeguard Adapter" />
     <meta property="og:title" content="Play Switch games on Keyboard!" />
@@ -39,9 +33,14 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="fb:app_id" content="394254955078112" />
     <meta name="twitter:site" content="@danielkaspo" />
-    <!-- </socialmedia> -->
-
+    <!-- end socialmedia -->
+    <meta
+      name="description"
+      content="Play Smash Ultimate with a Keyboard! The Edgeguard adapter turns any keyboard into a Nintendo Switch controller. Compatible with games like Tetris 99, Super Mario Maker 2, Celeste, and more!"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="landing.css?v=2" />
   </head>
 
   <body>
