--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <!-- end verification -->
 
     <!-- socialmedia -->
-    <!-- All social meta properties coming from https://css-tricks.com/essential-meta-tags-social-media/ -->
+    <!-- Coming from https://css-tricks.com/essential-meta-tags-social-media/ -->
+    <!-- And coming from https://ogp.me/#metadata -->
     <meta property="og:site_name" content="keyboard.gg's Edgeguard Adapter" />
     <meta property="og:title" content="Play Switch games on Keyboard!" />
+    <meta property="og:type" content="website" />
     <meta
       property="og:description"
       content="Use your keyboard as a controller for games like Smash Ultimate, Tetris 99, and more on the Nintendo Switch!"
