Updated text to be more social-mediay

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Coming from https://css-tricks.com/essential-meta-tags-social-media/ -->
     <!-- And coming from https://ogp.me/#metadata -->
     <meta property="og:site_name" content="keyboard.gg's Edgeguard Adapter" />
-    <meta property="og:title" content="Play Switch games on Keyboard!" />
+    <meta property="og:title" content="Play Switch Games on a Keyboard!" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Use your keyboard as a controller for games like Smash Ultimate, Tetris 99, and more on the Nintendo Switch!"
+      content="Play Smash Ultimate, Tetris 99, and more with a Keyboard on the Nintendo Switch!"
     />
     <meta property="og:url" content="https://keyboard.gg/" />
     <meta
