--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
             />
           </a>
           <a
+            href="https://www.youtube.com/c/DanielKaspo"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="images/social/youtube.png"
+              alt="keyboard.gg's YouTube"
+              title="YouTube"
+            />
+          </a>
+          <a
             href="https://www.facebook.com/keyboard.gg/"
             target="_blank"
             rel="noopener"
@@ -212,7 +223,7 @@
               title="Instagram"
             />
           </a>
-          <a
+          <!-- <a
             href="https://www.twitch.tv/nessdan/"
             target="_blank"
             rel="noopener"
@@ -222,7 +233,7 @@
               alt="keyboard.gg's Twitch"
               title="Twitch"
             />
-          </a>
+          </a> -->
         </div>
       </section>
     </main>
