Update alt text and margin.

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
           <a href="https://discord.gg/fgHmrHp" target="_blank" rel="noopener">
             <img
               src="images/social/discord.png"
-              alt="keyboard.gg's Discord"
+              alt="Discord"
               title="Discord"
             />
           </a>
           <!-- <a href="https://www.reddit.com/u/keyboardGG" target="_blank" rel="noopener">
-            <img src="images/social/reddit.png" alt="keyboard.gg's Reddit" title="Reddit" />
+            <img src="images/social/reddit.png" alt="Reddit" title="Reddit" />
           </a> -->
           <a
             href="https://twitter.com/danielkaspo"
@@ -186,7 +186,7 @@
           >
             <img
               src="images/social/twitter.png"
-              alt="keyboard.gg's Twitter"
+              alt="Twitter"
               title="Twitter"
             />
           </a>
@@ -197,7 +197,7 @@
           >
             <img
               src="images/social/youtube.png"
-              alt="keyboard.gg's YouTube"
+              alt="YouTube"
               title="YouTube"
             />
           </a>
@@ -208,7 +208,7 @@
           >
             <img
               src="images/social/facebook.png"
-              alt="keyboard.gg's Facebook"
+              alt="Facebook"
               title="Facebook"
             />
           </a>
@@ -219,7 +219,7 @@
           >
             <img
               src="images/social/instagram.png"
-              alt="keyboard.gg's Instagram"
+              alt="Instagram"
               title="Instagram"
             />
           </a>
@@ -230,7 +230,7 @@
           >
             <img
               src="images/social/twitch.png"
-              alt="keyboard.gg's Twitch"
+              alt="Twitch"
               title="Twitch"
             />
           </a> -->
