More details on tournament page

--- a/tournament/index.html
+++ b/tournament/index.html
@@ -54,11 +54,16 @@
         come.
       </p>
       <p>
-        For tournament organizers: I've passionately been reading major
-        tournament controller guidelines for events like Genesis, The Big House,
-        Super Smash Con, and more, making sure we play by the rules.
+        For tournament organizers: I've been reading and making sure we're
+        compliant with major tournament controller guidelines for events like
+        Genesis, The Big House, Super Smash Con, and more, making sure we play
+        by the rules. No macros, no turbos, no funny business.
       </p>
-      <p>A more detailed answer will be up here eventually!</p>
+      <p>
+        This page will eventually go into more detail on capabilities and maybe
+        one day, allow any TO to plug an adapter while on this site to see what
+        a competitor's binds are.
+      </p>
     </main>
   </body>
 </html>
