--- a/v9.html
+++ b/v9.html
@@ -257,8 +257,9 @@
       } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
 
       // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyCLTOrsPbBrCXu-WTEKDYO5c9lglog9lcU",
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyBDwdPhFoZZYQXeEkxMrWHH2EJHZe5Zius",
         authDomain: "keyboard-controller-waitlist.firebaseapp.com",
         databaseURL: "https://keyboard-controller-waitlist.firebaseio.com",
         projectId: "keyboard-controller-waitlist",
