Adding static heights for lighthouse

--- a/v9.html
+++ b/v9.html
@@ -171,13 +171,15 @@
         <div class="icons">
           <a href="https://discord.gg/fgHmrHp" target="_blank" rel="noopener">
             <img
+              width="180"
+              height="206"
               src="images/social/discord.png"
               alt="Discord"
               title="Discord"
             />
           </a>
           <!-- <a href="https://www.reddit.com/u/keyboardGG" target="_blank" rel="noopener">
-            <img src="images/social/reddit.png" alt="Reddit" title="Reddit" />
+            <img width="180" height="180" src="images/social/reddit.png" alt="Reddit" title="Reddit" />
           </a> -->
           <a
             href="https://twitter.com/danielkaspo"
@@ -185,6 +187,8 @@
             rel="noopener"
           >
             <img
+              width="180"
+              height="180"
               src="images/social/twitter.png"
               alt="Twitter"
               title="Twitter"
@@ -196,6 +200,8 @@
             rel="noopener"
           >
             <img
+              width="180"
+              height="126"
               src="images/social/youtube.png"
               alt="YouTube"
               title="YouTube"
@@ -207,6 +213,8 @@
             rel="noopener"
           >
             <img
+              width="180"
+              height="180"
               src="images/social/facebook.png"
               alt="Facebook"
               title="Facebook"
@@ -218,6 +226,8 @@
             rel="noopener"
           >
             <img
+              width="180"
+              height="180"
               src="images/social/instagram.png"
               alt="Instagram"
               title="Instagram"
@@ -229,6 +239,8 @@
             rel="noopener"
           >
             <img
+              width="180"
+              height="210"
               src="images/social/twitch.png"
               alt="Twitch"
               title="Twitch"
