Fix more image stuff

--- a/v9.html
+++ b/v9.html
@@ -50,7 +50,13 @@
       <div class="the-fold">
         <div class="heading-wrapper">
           <div class="logo-side">
-            <img class="logo" src="images/logo.png" alt="keyboard.gg Logo" />
+            <img
+              width="422"
+              height="91"
+              class="logo"
+              src="images/logo.png"
+              alt="keyboard.gg Logo"
+            />
           </div>
           <div class="intro-text">
             <h1 class="page-title">The Edgeguard Keyboard Adapter</h1>
