--- a/v9.html
+++ b/v9.html
@@ -138,6 +138,7 @@
 
         <div class="video-wrap">
           <iframe
+            title="The Edgeguard Adapter - Play Switch Games with a Keyboard (Kickstarter Video)"
             class="lazy kickstarter-video"
             data-src="https://www.youtube.com/embed/4rDczKkEeYA"
             frameborder="0"
