--- a/v9.html
+++ b/v9.html
@@ -381,7 +381,7 @@
     <script src="js/3rd-party/lazyload-17.8.3.min.js"></script>
 
     <script>
-      var lazyLoadInstance = new LazyLoad();
+      var lazyLoadInstance = new LazyLoad({ elements_selector: ".lazy" });
     </script>
   </body>
 </html>
